# word2vec

./: .gitignore  CMakeLists.txt
